--- a/catkin_ws/src/exosystem/CMakeLists.txt
+++ b/catkin_ws/src/exosystem/CMakeLists.txt
@@ -117,7 +117,7 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+  include
   ${catkin_INCLUDE_DIRS}
 )
 
@@ -147,9 +147,9 @@ include_directories(
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
+#target_link_libraries(${PROJECT_NAME}_node
+#  ${catkin_LIBRARIES} controlcan
+#)
 
 #############
 ## Install ##
@@ -198,3 +198,7 @@ include_directories(
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+
+add_executable(motorcontrol src/motorcontrol.cpp)
+target_link_libraries(motorcontrol ${catkin_LIBRARIES} ${PROJECT_SOURCE_DIR}/lib/libcontrolcan.so)
+add_dependencies(motorcontrol exosystem_generate_messages_cpp)
